全画面遷移をrouterに移行

--- a/RouterApp/Views/TabBarController/TabBarController.storyboard
+++ b/RouterApp/Views/TabBarController/TabBarController.storyboard
@@ -3,6 +3,8 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,6 +19,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="sjx-hp-rPg" kind="relationship" relationship="viewControllers" id="eao-Wb-gSG"/>
+                        <segue destination="xZB-mm-Yub" kind="relationship" relationship="viewControllers" id="H3v-xG-bZ7"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bWx-QI-J0W" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -33,8 +36,39 @@
             </objects>
             <point key="canvasLocation" x="70" y="-14"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="bhk-tn-lv0">
+            <objects>
+                <viewController id="xZB-mm-Yub" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="DOw-Eq-7dY">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tab2 " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dcF-4y-Hv6">
+                                <rect key="frame" x="186" y="437.5" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="emL-dH-jp4"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="dcF-4y-Hv6" firstAttribute="centerX" secondItem="DOw-Eq-7dY" secondAttribute="centerX" id="J6E-TD-GRJ"/>
+                            <constraint firstItem="dcF-4y-Hv6" firstAttribute="centerY" secondItem="DOw-Eq-7dY" secondAttribute="centerY" id="Vhd-F6-whJ"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" tag="1" systemItem="history" id="jeM-Sr-Imv"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xcn-Q5-7tq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="242" y="396"/>
+        </scene>
     </scenes>
     <resources>
         <image name="house.fill" catalog="system" width="128" height="106"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
